<resources>
    <string name="app_name">6 из 45. Статистика в запросах</string>


    <string name="six_label">6</string>
    <string name="four_five_label">45</string>
    <string name="loto_6_45">Гослото «6 из 45»</string>
    <string name="statistics">Статистика</string>
    <string name="all_draws_label">За все тиражи</string>
    <string name="by_draws_label">По тиражам</string>
    <string name="by_date_header_label">По датам</string>
    <string name="by_date_header_sum">По суммам</string>
    <string name="guess_six_number">угадано 6 номеров</string>
    <string name="guess_five_number">угадано 5 номеров</string>
    <string name="turn_header">Полный круг с %s - го тиража</string>
    <string name="consider_header">Анализ комбинаций</string>
    <string name="basket_view_title">Выбранные наборы</string>
    <string name="donate_title">Поддержка проекта</string>
    <string name="donate_label">Оказать поддержку проекту</string>
    <string name="draw_details_title">Результаты тиража №</string>
    <string name="digit_details_title">Статистика по номеру №</string>
    <string name="per_draw_label">В среднем за тираж</string>
    <string name="internal_error">Внутренняя ошибка, повторите попытку позже</string>
    <string name="internet_error">Отсутствует интернет содинения</string>
    <string name="from_draw">С Тиража</string>
    <string name="draws_label">Тиражи</string>
    <string name="to_draw">По Тираж</string>
    <string name="odd_label">Нечетных</string>
    <string name="even_label">Четных</string>
    <string name="often_digit_label">Часто выпадающие числа</string>
    <string name="less_digit_label">Редко выпадающие числа</string>
    <string name="often_digit_short">Часто выпад.</string>
    <string name="less_digit_short">Редко выпад.</string>
    <string name="middle_digit_number">Середнячок</string>
    <string name="result_field_number">Комбинация на поле</string>
    <string name="result_field">Поле</string>
    <string name="total_ticket_label">Число билетов в розыгрышах</string>
    <string name="total_paid_amount_label">Выплаченная сумма в розыгрышах</string>
    <string name="period_label">Период</string>
    <string name="draw_results_label">Итоги розыгрышей</string>
    <string name="table_orientation">Ориентация поля</string>
    <string name="select_combination_label">Выбранная комбинация</string>
    <string name="ball_set_label">Выбранные наборы</string>
    <string name="rare_label">Ожидаемые номера</string>
    <string name="rare_desc">( тиражей не выпадал / среднее число тиражей для выпадений номера )</string>
    <string name="often_desc_four">( выпадений в 4-х угаданных / всего выпадений )</string>
    <string name="often_desc_five">( выпадений в 5-и угаданных / всего выпадений )</string>
    <string name="often_desc_six">( выпадений в 6-и угаданных / всего выпадений )</string>
    <string name="consider_result">Результаты</string>
    <string name="even_odd_label">Четные, Нечетные</string>
    <string name="fab_falling_count">Количество выпадений</string>
    <string name="fab_percent">Проценты</string>
    <string name="fab_selected_set">Выбранные комбинации</string>
    <string name="nav_menu_basket">Корзина</string>

    <string name="nav_tab_plane">Результаты</string>
    <string name="nav_tab_grid">Таблица</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="draw_date_label">Дата розыгрыша</string>
    <string name="ball_sum_label">Сумма выпавших номеров</string>
    <string name="draw_result_label">Итоги розыгрыша</string>
    <string name="ticket_count_label">Билетов участвовало</string>
    <string name="draw_pay_amount_label">Выплачено по результам тиража</string>
    <string name="combination_label">Комбинация</string>
    <string name="superprize_draw_label">Суперприз</string>
    <string name="error_required_field">Поле обязательно для заполнения</string>
    <string name="button_show">Показать</string>
    <string name="button_hide">Скрыть</string>
    <string name="button_cancel">Отменить</string>
    <string name="button_basket">В корзину</string>
    <string name="button_consider">Расчитать</string>
    <string name="button_donate">Поддержать</string>
    <string name="button_clear">Очистить</string>
    <string name="button_delete">Удалить</string>
    <string name="avg_sum_label">Средняя сумма номеров</string>
    <string name="last_win_label">Последние тиражи из набора, в которых</string>
    <string name="show_result_by_draw">За последние 1 - 45 тиражей</string>
    <string name="show_result_by_draw_sel">По выбранным тиражам</string>
    <string name="start_turn_draw">Введите номер тиража</string>
    <string name="from_draw_label">С тиража</string>
    <string name="to_draw_label">По тираж</string>
    <string name="by_sum_label">По выпавшим суммам</string>
    <string name="by_ball_label">По выпавшим номерам</string>
    <string name="by_date_label">По дню в месяце</string>
    <string name="by_month_label">По месяцу</string>
    <string name="by_day_week_label">По дню недели</string>
    <string name="by_day_month_label">По дню и месяцу</string>
    <string name="by_period">За период</string>
    <string name="day_label">День</string>
    <string name="month_label">Месяц</string>
    <string name="left_digit_label">Номера тиражей, в которых осталось</string>
    <string name="consaider_pairs">Пары</string>
    <string name="consaider_threes">Тройки</string>
    <string name="consaider_fours">Четверки</string>
    <string name="show_last_fall_label">Отметить в выбранных наборах</string>
    <string name="hundred_label">100 рублей</string>
    <string name="two_hundred_label">200 рублей</string>
    <string name="three_hundred_label">300 рублей</string>
    <string name="five_hundred_label">500 рублей</string>
    <string name="seven_hundred_label">700 рублей</string>
    <string name="inf_hundred_label">1000 рублей</string>
    <string name="back_btn_label">Назад</string>
    <string name="show_on_field">Выделить на поле</string>
    <string name="often_win_five_ball">Частота выпадения в выигрышах</string>
    <string name="show_additional_info">Показать информацию по номерам</string>
    <string name="previous_draw_label">Предыдущий тираж №</string>
    <string name="support_service">Ваше Сообщение</string>
    <string name="send_to_support">Отправить</string>
    <string name="ten_hits_label">Кол-во выпадений в 10 тиражах</string>

</resources>
