<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/drawTitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/draws_label"
        android:textColor="@color/shokoTextColor"
        android:textSize="22dp" />


    <ru.sff.statistic.component.TwoCellStat
        android:id="@+id/twoCellDrawRangeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/deviderColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/oftenDigitId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:text="@string/often_digit_label"
            android:textColor="@color/grayTextColor"
            android:textSize="16dp" />

        <LinearLayout
            android:id="@+id/addToBasketBiggerAllId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="right">

            <ImageView
                android:id="@+id/basketBiggerAllImageId"
                app:srcCompat="@drawable/ic_basket_grey600_18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp" />
        </LinearLayout>
    </LinearLayout>

    <ru.sff.statistic.component.SixBallSet
        android:id="@+id/biggerBallSetId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lessDigitId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:text="@string/less_digit_label"
            android:textColor="@color/grayTextColor"
            android:textSize="16dp" />

        <LinearLayout
            android:id="@+id/addToBasketLessAllId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="right">

            <ImageView
                android:id="@+id/basketLessAllImageId"
                app:srcCompat="@drawable/ic_basket_grey600_18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp" />
        </LinearLayout>
    </LinearLayout>

    <ru.sff.statistic.component.SixBallSet
        android:id="@+id/lessBallSetId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/middleDigitId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:text="@string/middle_digit_number"
            android:textColor="@color/grayTextColor"
            android:textSize="16dp" />

        <LinearLayout
            android:id="@+id/addToBasketMiddleAllId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="right">

            <ImageView
                android:id="@+id/basketMiddleAllImageId"
                app:srcCompat="@drawable/ic_basket_grey600_18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp" />
        </LinearLayout>
    </LinearLayout>

    <ru.sff.statistic.component.SixBallSet
        android:id="@+id/middleBallSetId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/deviderColor" />

    <TextView
        android:id="@+id/avgSumLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/avg_sum_label"
        android:textColor="@color/grayTextColor"
        android:visibility="gone"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/avgSumValueId"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/shokoColor"
        android:textSize="18dp" />


    <TextView
        android:id="@+id/evenOddLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/even_odd_label"
        android:textColor="@color/grayTextColor"
        android:textSize="16dp" />

    <ru.sff.statistic.component.TwoCellStat
        android:id="@+id/twoCellEvenOddId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/totalTicketLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/total_ticket_label"
        android:textColor="@color/grayTextColor"
        android:textSize="16dp" />

    <ru.sff.statistic.component.TwoCellStat
        android:id="@+id/twoCellTotalTicketId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/totalPaidAmountLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/total_paid_amount_label"
        android:textColor="@color/grayTextColor"
        android:textSize="16dp" />

    <ru.sff.statistic.component.TwoCellStat
        android:id="@+id/twoCellPaidAmountId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/drawResultsLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/draw_results_label"
        android:textColor="@color/grayTextColor"
        android:textSize="16dp" />

    <ru.sff.statistic.component.WinTable
        android:id="@+id/winTableAllResultsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/deviderColor" />

    <TextView
        android:id="@+id/resultOnTableId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/result_field_number"
        android:textColor="@color/grayTextColor"
        android:textSize="16dp" />

    <ru.sff.statistic.component.FiveNineTable
        android:id="@+id/fiveNineTableId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tableOrientationId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/table_orientation"
        android:textColor="@color/splashTextColor"
        android:textSize="14dp" />

    <ru.sff.statistic.component.FieldOrientation
        android:id="@+id/fieldOrientationId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/fallingNumbersLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="Показыватьть наборы чисел"
        android:textColor="@color/splashTextColor"
        android:textSize="14dp" />

    <LinearLayout
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/biggerButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/border_btn_orange"
            android:drawableLeft="@drawable/ic_check_orange_18dp"
            android:gravity="center"
            android:paddingHorizontal="2dp"
            android:paddingVertical="4dp"
            android:text="@string/often_digit_short"
            android:textColor="@color/ballOrange"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/lessButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/border_btn_orange"
            android:drawableLeft="@drawable/ic_check_orange_18dp"
            android:gravity="center"
            android:paddingHorizontal="2dp"
            android:paddingVertical="4dp"
            android:text="@string/less_digit_short"
            android:textColor="@color/ballOrange"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/middleButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/border_btn_orange"
            android:drawableLeft="@drawable/ic_check_orange_18dp"
            android:gravity="center"
            android:paddingHorizontal="2dp"
            android:paddingVertical="4dp"
            android:text="@string/middle_digit_number"
            android:textColor="@color/ballOrange"
            android:textSize="12dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/deviderColor" />
</LinearLayout>