<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/backgroundColor"
    tools:context=".activity.SplashActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/sixDigitId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-16dp"
            android:layout_marginTop="-48dp"
            android:textSize="196sp"
            android:textColor="@color/textYellowColor"
            android:text="@string/six_label"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="36dp">

        <ImageView
            android:layout_width="312dp"
            android:layout_height="178dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/splashlogo"/>
            <TextView
                android:layout_marginTop="12dp"
                android:id="@+id/goslotoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="18dp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/loto_6_45"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/fourFiveDigitId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-32dp"
            android:layout_marginBottom="-72dp"
            android:textSize="256sp"
            android:textColor="@color/textRedColor"
            android:text="@string/four_five_label"
            android:layout_gravity="bottom|right"
            />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>